Fix border issues in left panel preview

--- a/src/elements/series-preview.html
+++ b/src/elements/series-preview.html
@@ -15,21 +15,17 @@
 
       .previewContainer {
         height: 128px;
-        width: 128px;
         overflow: hidden;
-        margin: auto;
       }
 
       .seriesPreview {
-        /* margin: 4px;
-        padding: 4px; */
         border: 1px solid rgba(0, 0, 0, 0);
         position: relative;
       }
 
       .seriesPreview:hover {
         cursor: pointer;
-        border-color: #ffffff;
+        border-color: var(--accent-color)
       }
 
       .seriesPreview[selected] {
