--- a/src/gex-viewer.html
+++ b/src/gex-viewer.html
@@ -261,7 +261,7 @@
         <div slot="content">
           <app-toolbar class="patient data">
             <div main-title>
-              <iron-icon icon="social:person"></iron-icon> Patient
+              <iron-icon icon="social:person"></iron-icon><div>Patient</div>
             </div>
           </app-toolbar>
           <div class="patient series">
@@ -281,7 +281,7 @@
             </div>
             <app-toolbar class="normative data">
               <div main-title>
-                <iron-icon icon="social:school"></iron-icon> Normatives
+                <iron-icon icon="social:school"></iron-icon><div>Normatives</div>
               </div>
             </app-toolbar>
             <div class="normative series">
