--- a/src/elements/gex-layout-manager.html
+++ b/src/elements/gex-layout-manager.html
@@ -172,24 +172,22 @@
         };
       }
 
-      connectedCallback() {
-        super.connectedCallback();
-        this._observer1 =
-          new Polymer.FlattenedNodesObserver(this.$.s0, (info) => {
-          // console.log(info);
-          // this._processNewNodes(info.addedNodes);
-          // this._processRemovedNodes(info.removedNodes);
-        });
-      }
+      // connectedCallback() {
+      //   super.connectedCallback();
+      //   this._observer1 =
+      //     new Polymer.FlattenedNodesObserver(this.$.s0, (info) => {
+      //     // this._processNewNodes(info.addedNodes);
+      //     // this._processRemovedNodes(info.removedNodes);
+      //   });
+      // }
 
-      disconnectedCallback() {
-        super.disconnectedCallback();
-        window.removeEventListener('hashchange', this._boundListener);
-      }
+      // disconnectedCallback() {
+      //   super.disconnectedCallback();
+      //   window.removeEventListener('hashchange', this._boundListener);
+      // }
 
       _layoutChanged(layout) {
         // do not mess up layout if we are full screen
-        console.log(layout);
         if(this.fullscreen >= 0) {
           return;
         }
