WIP: Setup demo without back end

--- a/src/gex-library.html
+++ b/src/gex-library.html
@@ -648,6 +648,7 @@
               detail: {
                 feedLink: '/1/',
                 pluginInstance: '/1/',
+                selection: this.selection,
               },
             });
           this.dispatchEvent(geRetrieveStarted);
@@ -711,6 +712,7 @@
                 detail: {
                   feedLink: '/1/',
                   pluginInstance: '/1/',
+                  selection: this.selection,
                 },
               });
             this.dispatchEvent(geRetrieveStarted);
