--- a/src/elements/series-preview.html
+++ b/src/elements/series-preview.html
@@ -15,6 +15,8 @@
 
       .previewContainer {
         height: 128px;
+        width: 128px;
+        margin: auto;
         overflow: hidden;
       }
 
@@ -80,6 +82,7 @@
         font-weight: normal;
         padding: 2px;
         z-index: 2;
+        max-width: 128px;
       }
 
       .about.date {
