--- a/src/ra-app.html
+++ b/src/ra-app.html
@@ -82,6 +82,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       app-header {
+        -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+        -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+        box-sizing: border-box;  
         color: #fff;
         background-color: var(--dark-primary-color);
         font-weight: lighter;
