--- a/src/ra-app.html
+++ b/src/ra-app.html
@@ -305,6 +305,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             type: String,
             value: '../RSNA',
           },
+          patientData: {
+            type: Array,
+            value: [],
+          },
         };
       }
 
