Fix left panel overflow issue on firefox and safari

--- a/src/gex-viewer.html
+++ b/src/gex-viewer.html
@@ -42,6 +42,7 @@
         color: var(--text-primary-color);
         font-weight: lighter;
         width: 100%;
+        min-height: 0;
       }
 
       .content {
