--- a/src/elements/series-preview.html
+++ b/src/elements/series-preview.html
@@ -122,6 +122,7 @@
       <div class="previewContainer">
         <img
           id="image"
+          draggable="false"
           on-mousemove='onMove'
           on-mouseout='centerThumbnail'>
       </div>
