--- a/src/ra-app.html
+++ b/src/ra-app.html
@@ -321,6 +321,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             type: Array,
             value: [],
           },
+          normativeData: {
+            type: Array,
+            value: [],
+          },
           demoId: {
             type: String,
             value: '',
